--- a/AllworxCall Activity/AllworxCall Activity.csproj
+++ b/AllworxCall Activity/AllworxCall Activity.csproj
@@ -37,6 +37,7 @@
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
